# rustinel

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs  config.toml  deny.toml  rustinel.service  zensical.toml
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md  release.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  ci.yml  docs.yml  privileged-smoke.yml  release.yml  rsigma-engine.yml  sigma-rules.yml  zizmor.yml
benches/: sigma_backend.rs
docs/: active-response.md  architecture.md  benchmarking.md  cli.md  configuration.md  detection.md  development.md  faq.md  getting-started.md  index.md  limitations.md  operations.md  output.md  roadmap.md  siem-demos.md  troubleshooting.md  why-rustinel.md
ebpf/: Cargo.toml  deny.toml
ebpf/src/: dns.rs  events.rs  file.rs  main.rs  network.rs  process.rs
examples/: memory_target.rs
examples/siem/elastic/: README.md  docker-compose.yml  filebeat.yml
examples/siem/splunk/: README.md  docker-compose.yml  send-alerts.py
overrides/: main.html
packaging/macos/: com.rustinel.agent.plist  rustinel.entitlements
planning/: release-1.2-plan.md
rules/sigma/: linux_whoami.yml  macos_whoami.yml  windows_whoami.yml
scripts/bench/: linux.sh  windows.ps1
scripts/install/: install.ps1  install.sh
scripts/macos/: package-app.sh
scripts/rules/: fetch_corpus.py
src/: config.rs  doctor.rs  lib.rs  main.rs  memory.rs  rules.rs  service.rs  setup.rs
src/alerts/: dedup.rs  mod.rs
src/cli/: mod.rs
src/doctor/: inspect.rs  mod.rs  path.rs  prerequisites.rs  rules.rs  services.rs
src/engine/: alert.rs  condition.rs  handler.rs  loader.rs  logsource.rs  matcher.rs  mod.rs  rsigma_adapter.rs  rsigma_backend.rs  rule.rs  stats.rs
src/ioc/: alert.rs  hash.rs  load.rs  matchers.rs  mod.rs  types.rs
src/memory/: linux.rs  macos.rs  mod.rs  types.rs  unsupported.rs  windows.rs
src/models/: alert.rs  ecs.rs  event.rs  fields.rs  match_details.rs  mod.rs
src/models/ecs/: alert.rs  event.rs  helpers.rs  mod.rs  network.rs  registry.rs  user.rs
src/normalizer/: mod.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/reload/: mod.rs
src/response/: mod.rs
src/runtime/: ioc.rs  linux.rs  logging.rs  macos.rs  mod.rs  orchestration.rs  windows.rs  yara.rs
src/scanner/: mod.rs
src/sensor/: dns.rs  mod.rs
src/sensor/linux/: ebpf.rs  events.rs  mod.rs
src/sensor/macos/: bpf.rs  esf.rs  mod.rs  packet.rs  socket.rs
src/sensor/windows/: etw.rs  field_maps.rs  mapper.rs  mod.rs
src/state/: connection.rs  dns.rs  mod.rs  process.rs  sid.rs
src/utils/: mod.rs  path.rs  process.rs  socket.rs  user.rs
tests/: active_response.rs  alert_output.rs  config_integration.rs  dedup_integration.rs  ecs_contract.rs  pipeline_ioc.rs  pipeline_sigma.rs  platform_mapping.rs  reload.rs  router_and_handlers.rs  rsigma_engine_parity.rs  yara_disk.rs  yara_memory.rs
tests/common/: mod.rs
