[package]
name = "rustinel"
version = "1.0.2"
edition = "2021"
authors = []
description = "Open-source EDR for Windows (ETW) and Linux (eBPF) with Sigma, YARA, and IOC detection"
license = "Apache-2.0"
rust-version = "1.92"
default-run = "rustinel"

[workspace]
members = ["."]
default-members = ["."]
resolver = "2"

[dependencies]
# Sigma detection engine
# Using regex for pattern matching in Sigma rules
regex = "1.10"

# Boolean expression evaluator for Sigma logic
evalexpr = "13.1.0"

# Network and encoding utilities for Sigma
ipnetwork = "0.21.1"
base64 = "0.22"
digest = "0.11"
hex = "0.4"
md-5 = "0.11"
sha1 = "0.11"
sha2 = "0.11"

# Yara scanning
yara-x = "1.17"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "time", "net"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["clock"] }

# Utilities
anyhow = "1.0"
thiserror = "2.0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
clap = { version = "4.4", features = ["derive"] }
arc-swap = "1.7"

# Configuration
config = "0.15.23"

# Linux-specific
[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.13", default-features = false }
libc = "0.2"

# macOS-specific
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
# Endpoint Security framework bindings (process and file telemetry).
# macos_11_0_0 sets the minimum supported macOS to Big Sur and enables
# reference-counted message handling.
endpoint-sec = { version = "0.5", features = ["macos_11_0_0"] }
endpoint-sec-sys = "0.5"

# Windows-specific
[target.'cfg(windows)'.dependencies]
# PE parsing and memory-mapped I/O (Windows-only; PE metadata is not used on Linux)
pelite = "0.10"
memmap2 = "0.9"
ferrisetw = "1.2"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_Diagnostics_Etw", "Win32_Security", "Win32_Security_Authorization", "Win32_System_Threading", "Win32_System_Diagnostics_ToolHelp", "Win32_System_ProcessStatus", "Win32_Storage_FileSystem", "Win32_System_Memory", "Win32_System_Diagnostics_Debug"] }
windows-service = "0.8.1"

[dev-dependencies]
tempfile = "3.8"
