[package]
name = "rustinel"
version = "1.2.0-rc.2"
edition = "2021"
authors = []
description = "Open-source EDR for Windows, Linux, and macOS with Sigma, YARA, and IOC detection"
license = "Apache-2.0"
rust-version = "1.92"
default-run = "rustinel"

[workspace]
members = ["."]
default-members = ["."]
resolver = "2"

[features]
# Opt-in RSigma library backend: swaps Rustinel's built-in Sigma matcher for
# rsigma-parser + rsigma-eval while keeping Rustinel-owned normalization,
# logsource routing, ECS alerts, hot reload, and IOC/YARA.
rsigma-engine = ["dep:rsigma-parser", "dep:rsigma-eval"]

[dependencies]
# Sigma detection engine
# Using regex for pattern matching in Sigma rules
regex = "1.10"

# Boolean expression evaluator for Sigma logic
evalexpr = "11.3.1"

# Optional RSigma library backend (enabled by the `rsigma-engine` feature):
# parsing (rsigma-parser) and stateless evaluation (rsigma-eval).
rsigma-parser = { version = "0.18", optional = true }
rsigma-eval = { version = "0.18", optional = true }

# Network and encoding utilities for Sigma
ipnetwork = "0.21.1"
base64 = "0.22"
digest = "0.11"
hex = "0.4"
md-5 = "0.11"
sha1 = "0.11"
sha2 = "0.11"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "time", "net"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["clock"] }
semver = "1.0"

# Utilities
anyhow = "1.0"
thiserror = "2.0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
clap = { version = "4.4", features = ["derive"] }
arc-swap = "1.7"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls-native-roots"] }
url = "2.5"
zip = { version = "8.6", default-features = false, features = ["deflate"] }

# Configuration
config = "0.15.23"
notify = "8.2.0"

# Linux-specific
[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.14", default-features = false }
libc = "0.2"

# YARA-X uses its native JIT outside macOS.
[target.'cfg(not(target_os = "macos"))'.dependencies]
yara-x = "1.17"

# macOS-specific
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
# Endpoint Security clients cannot use hardened runtime relaxation
# entitlements, so use the Pulley interpreter instead of YARA-X's native JIT.
yara-x = { version = "1.17", features = ["pulley"] }
# Endpoint Security framework bindings (process and file telemetry).
# macos_11_0_0 sets the minimum supported macOS to Big Sur and enables
# reference-counted message handling.
endpoint-sec = { version = "0.6", features = ["macos_11_0_0"] }
endpoint-sec-sys = "0.6"
# Process/socket inspection for best-effort PID attribution of captured flows.
libproc = "0.14"
# Mach VM APIs for YARA process-memory scanning (task_for_pid, mach_vm_read).
mach2 = "0.6"

# Windows-specific
[target.'cfg(windows)'.dependencies]
# PE parsing and memory-mapped I/O (Windows-only; PE metadata is not used on Linux)
pelite = "0.10"
memmap2 = "0.9"
ferrisetw = "1.2"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_Diagnostics_Etw", "Win32_Security", "Win32_Security_Authorization", "Win32_System_Threading", "Win32_System_Diagnostics_ToolHelp", "Win32_System_ProcessStatus", "Win32_Storage_FileSystem", "Win32_System_Memory", "Win32_System_Diagnostics_Debug"] }
windows-service = "0.8.1"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.8"

# Compare the built-in Sigma engine (default) against the RSigma backend by
# running `cargo bench` and `cargo bench --features rsigma-engine`.
[[bench]]
name = "sigma_backend"
harness = false
